[gd_scene load_steps=4 format=2]

[ext_resource path="res://Prueba00/Escenas/DevelopGame.gd" type="Script" id=1]
[ext_resource path="res://Prueba00/Images/interfazDeUsuarioDesarrollo.png" type="Texture" id=2]
[ext_resource path="res://Prueba00/Escenas/Parametros.tscn" type="PackedScene" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="developTexture" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="ItemListtheme" type="ItemList" parent="developTexture"]
margin_left = 288.0
margin_top = 100.5
margin_right = 922.0
margin_bottom = 419.5
select_mode = 1
max_columns = 8
icon_scale = 2.0

[node name="Flyshiptheme" type="Button" parent="developTexture/ItemListtheme"]
margin_left = 13.5
margin_top = 21.0
margin_right = 109.5
margin_bottom = 56.0
text = "Aviones"

[node name="Medievaltheme" type="Button" parent="developTexture/ItemListtheme"]
margin_left = 13.5
margin_top = 60.0
margin_right = 109.5
margin_bottom = 95.0
text = "Medieval"

[node name="Racetheme" type="Button" parent="developTexture/ItemListtheme"]
margin_left = 13.5
margin_top = 100.0
margin_right = 109.5
margin_bottom = 135.0
text = "Carreras"

[node name="Sportstheme" type="Button" parent="developTexture/ItemListtheme"]
margin_left = 13.5
margin_top = 140.0
margin_right = 109.5
margin_bottom = 175.0
text = "Deportes"

[node name="Plataformtheme" type="Button" parent="developTexture/ItemListtheme"]
margin_left = 13.5
margin_top = 180.0
margin_right = 109.5
margin_bottom = 215.0
text = "Plataformas"

[node name="Puzzletheme" type="Button" parent="developTexture/ItemListtheme"]
margin_left = 13.5
margin_top = 220.0
margin_right = 109.5
margin_bottom = 255.0
text = "Puzzle"

[node name="ItemListgenre" type="ItemList" parent="developTexture"]
margin_left = 140.0
margin_top = 98.4999
margin_right = 269.0
margin_bottom = 421.5
select_mode = 1
max_columns = 8
icon_scale = 2.0

[node name="Actionbutton" type="Button" parent="developTexture/ItemListgenre"]
margin_left = 18.0
margin_top = 29.25
margin_right = 111.0
margin_bottom = 58.25
text = "Acción"

[node name="Adventurebutton" type="Button" parent="developTexture/ItemListgenre"]
margin_left = 18.0
margin_top = 70.0
margin_right = 111.0
margin_bottom = 99.0
text = "Aventura"

[node name="Rolbutton" type="Button" parent="developTexture/ItemListgenre"]
margin_left = 18.0
margin_top = 110.0
margin_right = 111.0
margin_bottom = 139.0
text = "Rol"

[node name="Simulationbutton" type="Button" parent="developTexture/ItemListgenre"]
margin_left = 18.0
margin_top = 150.0
margin_right = 111.0
margin_bottom = 179.0
text = "Simulación"

[node name="Strategybutton" type="Button" parent="developTexture/ItemListgenre"]
margin_left = 18.0
margin_top = 190.0
margin_right = 111.0
margin_bottom = 219.0
text = "Estrategia"

[node name="Casualbutton" type="Button" parent="developTexture/ItemListgenre"]
margin_left = 18.0
margin_top = 230.0
margin_right = 111.0
margin_bottom = 259.0
text = "Casual"

[node name="Genrelabel" type="Label" parent="developTexture"]
margin_left = 151.0
margin_top = 47.0
margin_right = 198.0
margin_bottom = 61.0
rect_scale = Vector2( 2, 2 )
text = "Género"

[node name="Themelabel" type="Label" parent="developTexture"]
margin_left = 289.0
margin_top = 47.0
margin_right = 336.0
margin_bottom = 61.0
rect_scale = Vector2( 2, 2 )
text = "Tema"

[node name="backButton2" type="Button" parent="developTexture"]
margin_left = 30.0
margin_top = 661.5
margin_right = 72.0
margin_bottom = 681.5
rect_scale = Vector2( 2, 2 )
text = "Back"

[node name="selectGenreLabel" type="Label" parent="developTexture"]
margin_left = 160.0
margin_top = 550.0
margin_right = 290.0
margin_bottom = 564.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Se ha seleccionado :"

[node name="electionGenre" type="Label" parent="developTexture"]
margin_left = 370.0
margin_top = 550.0
margin_right = 500.0
margin_bottom = 564.0
rect_scale = Vector2( 1.5, 1.5 )

[node name="electionTheme" type="Label" parent="developTexture"]
margin_left = 370.0
margin_top = 500.0
margin_right = 500.0
margin_bottom = 514.0
rect_scale = Vector2( 1.5, 1.5 )

[node name="selectThemeLabel" type="Label" parent="developTexture"]
margin_left = 160.0
margin_top = 500.0
margin_right = 290.0
margin_bottom = 514.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Se ha seleccionado :"

[node name="callParametros" type="Button" parent="developTexture"]
margin_left = 970.0
margin_top = 665.0
margin_right = 1012.0
margin_bottom = 685.0
rect_scale = Vector2( 2, 2 )
text = "Next"

[node name="Parametros" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="pressed" from="developTexture/ItemListtheme/Flyshiptheme" to="." method="_on_Flyshiptheme_pressed"]
[connection signal="pressed" from="developTexture/ItemListtheme/Medievaltheme" to="." method="_on_Medievaltheme_pressed"]
[connection signal="pressed" from="developTexture/ItemListtheme/Racetheme" to="." method="_on_Racetheme_pressed"]
[connection signal="pressed" from="developTexture/ItemListtheme/Sportstheme" to="." method="_on_Sportstheme_pressed"]
[connection signal="pressed" from="developTexture/ItemListtheme/Plataformtheme" to="." method="_on_Plataformtheme_pressed"]
[connection signal="pressed" from="developTexture/ItemListtheme/Puzzletheme" to="." method="_on_Puzzletheme_pressed"]
[connection signal="pressed" from="developTexture/ItemListgenre/Actionbutton" to="." method="_on_Actionbutton_pressed"]
[connection signal="pressed" from="developTexture/ItemListgenre/Adventurebutton" to="." method="_on_Adventurebutton_pressed"]
[connection signal="pressed" from="developTexture/ItemListgenre/Rolbutton" to="." method="_on_Rolbutton_pressed"]
[connection signal="pressed" from="developTexture/ItemListgenre/Simulationbutton" to="." method="_on_Simulationbutton_pressed"]
[connection signal="pressed" from="developTexture/ItemListgenre/Strategybutton" to="." method="_on_Strategybutton_pressed"]
[connection signal="pressed" from="developTexture/ItemListgenre/Casualbutton" to="." method="_on_Casualbutton_pressed"]
[connection signal="pressed" from="developTexture/backButton2" to="." method="_on_backButton2_pressed"]
[connection signal="pressed" from="developTexture/callParametros" to="." method="_on_callParametros_pressed"]
